MIL-54 fix styles on login menu **edit tab order of form **refactor input field icons **add margin between dropdown and button **align dropdown and button **added space between stay logged in and button **changed login button copy

--- a/app/css/nav.scss
+++ b/app/css/nav.scss
@@ -350,6 +350,12 @@ header.show .container {
       opacity: 0;
     }
   }
+
+  .btn {
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+
   .dropdown-menu {
     left: calc(100% - 300px);
     width: 300px;
